[package]
name = "tangibl"
version = "0.1.0"
edition = "2021"
exclude = [
  "assets/"
]

[dependencies]
topcodes = { version = "*", git = "https://github.com/battesonb/topcodes-rs" }
serde = { version = "1.0.137", features = [] }
serde_json = "1.0.81"
num_enum = "0.5.7"
lazy_static = "1.4.0"
log = { version = "0.4.17", features = ["release_max_level_off"] }
env_logger = "0.9.0"

[dev-dependencies]
enum-iterator = "1.1.1"
