[package]
name = "tangibl"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0"
exclude = [
  ".github",
  "assets/",
  "docs/",
]

[dependencies]
env_logger = "0.9.3"
lazy_static = "1.4.0"
log = { version = "0.4.18", features = ["release_max_level_off"] }
num_enum = "0.5.11"
serde = { version = "1.0.163", features = [] }
serde_json = "1.0.96"
topcodes = "0.1.0"

[dev-dependencies]
enum-iterator = "1.4.1"
