[package]
name = "tangibl"
description = "A parser for generating an AST from a set of predefined TopCodes"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0"
repository = "https://github.com/tangibl/tangibl-rs"
exclude = [
  ".github",
  "assets/",
  "docs/",
]

[dependencies]
env_logger = "0.10.1"
lazy_static = "1.4.0"
log = { version = "0.4.18", features = ["release_max_level_off"] }
num_enum = "0.7.1"
serde = { version = "1.0.163", features = [] }
serde_json = "1.0.96"
topcodes = "0.1.0"

[dev-dependencies]
enum-iterator = "1.4.1"
